--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,6 +2,7 @@
 import MobileHeader from "../components/MobileHeader.astro";
 import SideBar from "../components/SideBar.astro";
 import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
 interface Props {
 	title: string;
 	description: string;
@@ -31,17 +32,17 @@ const { title, description } = Astro.props;
 		<SideBar />
 		</section>
 		<slot />
-        <footer>
-            <div class="link_footer">
-                <p>© Pierre TOURNEUX -<span id="date"></span></p>
-                <a href="/mentionLegale">Mentions Légales</a>
-            </div>
-        </footer>
+		<div class="container_return">
+			<button id="return-to-top" class="return">
+				<img src="#" alt="icone flèche">
+			</button>
+		</div>
+        <Footer />
 
         <script>
 			const dateElement = document.getElementById("date");
 			if (dateElement) {
-   			    dateElement.textContent = new Date().getFullYear().toString();
+				dateElement.textContent = new Date().getFullYear().toString();
 			};
 		</script>
 
@@ -66,6 +67,7 @@ const { title, description } = Astro.props;
 
 <style lang="scss">
 	//Déclaration des variables couleur
+	$Black: #000;
 	$Orange: #CF6326;
 	//container
 	html{
@@ -80,6 +82,52 @@ const { title, description } = Astro.props;
 		margin-left: 4.6%;
 		max-width: 1550px;
 	}
+	.container_return{
+				width: 97vw;
+				display: flex;
+				justify-content: center;
+				padding-bottom: 2rem;
+				@media (min-width: 660px){
+				justify-content: flex-end;
+				align-items: center;
+				}
+				.return{
+					width: 100%;
+					display: flex;
+					justify-content: center;
+					align-items: center;
+					width: 35px;
+					height: 35px;
+					border-radius: 50%;
+					background: transparent;
+					bottom: 100px;
+					margin-right: 4%;
+					border: 1px solid $Black;
+					cursor: pointer;
+					transition: 0.2s;
+					@media (min-width: 660px){
+					display: flex;
+					position: fixed;
+					justify-content: center;
+					align-items: center;
+					z-index: 5;
+					}
+					img{
+						width: 15px;
+						height: 17px;
+						transform: rotate(180deg);
+						transition: 0.2s;
+					}
+					&:hover{
+						transition: 0.2s;
+						border: 3px solid $Black;
+						img{
+							transition: 0.2s;
+							transform: rotate(135deg);
+						}
+					}
+				}
+      		}
 
 	
 </style>
