--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ import ButtonFilledBlack from "../components/ButtonFilledBlack.astro";
 						<p>Vous pouvez aussi nous joindre par téléphone en cliquant ci-dessous.</p>
 					</div>
 					<!-- Bouton de la card -->
-					<div>
+					<div class="btnCard">
 						<a href="#">
 							<ButtonFilled2 title="APPELER"></ButtonFilled2>
 						</a>	
@@ -52,7 +52,7 @@ import ButtonFilledBlack from "../components/ButtonFilledBlack.astro";
 					<div>
 						<p>Vous pouvez prendre rendez-vous sur le site doctolib en cliquant ci-dessous.</p>
 					</div>
-						<div>
+						<div class="btnCard">
 						<a href="#">
 							<ButtonFilled></ButtonFilled>
 						</a>
@@ -79,7 +79,7 @@ import ButtonFilledBlack from "../components/ButtonFilledBlack.astro";
 						<p>Le cabinet et le secrétariat sont ouverts du lundi au vendredi de 8h à 20h00 ainsi que le samedi de 8h à 19h.</p>
 					</div>
 					<!-- Bouton de la card -->
-					<div>
+					<div class="btnCard">
 						<a href="#">
 							<ButtonFilledWhtie></ButtonFilledWhtie>
 						</a>	
@@ -147,7 +147,7 @@ import ButtonFilledBlack from "../components/ButtonFilledBlack.astro";
 				<p>Vous pourrez profiter du parking qu’offre le centre de santé dans lequel se situe le cabinet.</p>
 			</div>
 			<div>
-				<iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3938.741471519222!2d-0.20438632283925354!3d44.98867987107011!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd554cc66595d93b%3A0xc9e4d11c3cbd7af!2s67%20Rte%20de%20Coutras%2C%2033910%20Saint-Denis-de-Pile!5e1!3m2!1sfr!2sfr!4v1722115371219!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+				<iframe class="map responsiveMap" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3938.741471519222!2d-0.20438632283925354!3d44.98867987107011!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd554cc66595d93b%3A0xc9e4d11c3cbd7af!2s67%20Rte%20de%20Coutras%2C%2033910%20Saint-Denis-de-Pile!5e1!3m2!1sfr!2sfr!4v1722115371219!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 			</div>
 			<div>
 				<p>Le cabinet est situé au 67 route de Coutras, à Saint-Denis-de-Pile.</p>
@@ -207,42 +207,91 @@ import ButtonFilledBlack from "../components/ButtonFilledBlack.astro";
 		justify-content: center;
 		align-items: flex-start;
 		flex-wrap: wrap;
-		margin-top: 200px;
+		margin-top: 100px;
+		@media (min-width: 780px) {
+			margin-top: 200px;
+		}
 		/*style de la première card de la section accès rapide*/
 		.rapidAccessBox{
-			max-width: 410px;
-			height: 345px;
 			display: flex;
+			max-width: 287px;
+			height: 241.5px;
+			margin-bottom: 16px;
+			@media (min-width: 780px) {
+				max-width: 410px;
+				height: 345px;
+			}
 			.containerBox{
-				margin-left: 35px;
+				margin-left: 16px;
 				color: #fff;
 				background: linear-gradient(to right, transparent 75%, rgb(0, 0, 0, .40));
+				@media (min-width: 780px) {
+					margin-left: 35px;
+				}
 				.imgAccessBox{
+					width: 40px;
+					height: 40px;
+					padding-top: 16px;
+					padding-bottom: 16px;
+					@media (min-width: 780px) {
 					width: 70px;
 					height: 70px;
 					padding-top: 35px;
+					}
 					img{
 						width: 100%;
 						height: 100%;
 					}
 				}
-				p{
+
+				p{	
+					height: auto;
+					margin: 8px 0;
 					width: 90%;
+					@media (min-width: 780px) {
 					height: 69px;
+					}
+				}
+				.btnCard{
+					@media (max-width: 780px) {
+						margin-top: 32px;
+					}
 				}
 
 			}
 		}
 		#rapidAccessBox1{
 			background: $BlueOne;
-			border-radius: 4px 0 0 4px;
+			border-radius: 4px;
+			@media (min-width: 648px) {
+				border-radius: 4px 0 0 4px;
+			}
+			.containerBox{
+				border-radius: 0 4px 4px 0;
+				@media (min-width: 648px) {
+					border-radius: 0;
+				}
+			}
 		}
 		#rapidAccessBox2{
 			background: $BlueTwo;
+			border-radius: 4px;
+			@media (min-width: 648px) {
+				border-radius: 0 4px 4px 0;
+			}
+			.containerBox{
+				border-radius: 0 4px 4px 0;
+				@media (min-width: 1200px) {
+					border-radius: 0;
+				}
+			}
 		}
 		#rapidAccessBox3{
 			background: $BlueThree;
-			border-radius: 0 4px 4px 0;
+			border-radius: 4px;
+			@media (min-width: 1200px) {
+				border-radius: 0 4px 4px 0;
+			}
 			.containerBox{
 				border-radius: 0 4px 4px 0;
 			}
@@ -328,6 +377,12 @@ import ButtonFilledBlack from "../components/ButtonFilledBlack.astro";
 		}
 		.map{
 			border-radius: 4px;
+		}
+		.responsiveMap{
+			@media (max-width: 668px) {
+				width: 250px;
+				height: 200px;
+			}
 		}
 	}
 </style>
