--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -324,7 +324,7 @@ import ButtonFilledBlack from "../components/ButtonFilledBlack.astro";
 				justify-content: center;
 				width: 315px;
 				height: 500px;
-				background-image: url(/public/pierreTourneux.jpg);
+				background-image: url(/public/pierreTourneux.webp);
 				background-repeat: no-repeat;
 				background-size: cover;
 				background-position: center;
