--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -4,7 +4,7 @@
 
 <a href="/">         
     <div>
-        <img src="../../public/logo.jpg" alt="#">
+        <img src="../../public/logo.webp" alt="#">
     </div>
 </a>
 
