--- a/src/components/NavList.astro
+++ b/src/components/NavList.astro
@@ -4,9 +4,7 @@ import Logo from "./Logo.astro"
 ---
 <section class="containerNavbar">
     <div class="logoNavList">
-        <a href="/">
-            <img src="../../public/logo.webp" alt="#"/>
-        </a>
+        <Logo />
     </div>
     <ul>
         <li>
