--- a/src/components/NavList.astro
+++ b/src/components/NavList.astro
@@ -4,7 +4,9 @@ import Logo from "./Logo.astro"
 ---
 <section class="containerNavbar">
     <div class="logoNavList">
-        <Logo />
+        <a href="/">
+            <img src="../../public/logo.webp" alt="#"/>
+        </a>
     </div>
     <ul>
         <li>
