--- a/src/components/NavList.astro
+++ b/src/components/NavList.astro
@@ -5,7 +5,7 @@ import Logo from "./Logo.astro"
 <section class="containerNavbar">
     <div class="logoNavList">
         <a href="/">
-            <img src="../../public/logo.webp" alt="#"/>
+            <img src="/public/logo.webp" alt="#"/>
         </a>
     </div>
     <ul>
