--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -4,7 +4,7 @@
 
 <a href="/">         
     <div>
-        <img src="/public/logo.webp" alt="#">
+        
     </div>
 </a>
 
@@ -13,6 +13,7 @@
         width: 70px;
         height: 70px;
         border: 0;
+        background-image: url(/public/logo.jpg);
         img{
             width: 100%;
             height: 100%;
