--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -19,7 +19,7 @@
 <style lang="scss">
     $White: #fff;
     $Black: #000;
-    $Orange: #CF6326;
+    $Orange: #FF9A60;
 	$BlueOne: #344E4C;
 
     h1{
