--- a/src/components/MobileHeader.astro
+++ b/src/components/MobileHeader.astro
@@ -34,7 +34,7 @@ import Logo from "./Logo.astro";
 <style lang="scss">
     $White: #fff;
     $Black: #000;
-    $Orange: #CF6326;
+    $Orange: #FF9A60;
 
     .hidden {
       display: none;
