--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -68,7 +68,7 @@ const { title, description } = Astro.props;
 <style lang="scss">
 	//Déclaration des variables couleur
 	$Black: #000;
-	$Orange: #CF6326;
+	$Orange: #FF9A60;
 	//container
 	html{
 		position: relative;
