--- a/src/components/ButtonFilled.astro
+++ b/src/components/ButtonFilled.astro
@@ -6,7 +6,7 @@
 <button>RENDEZ-VOUS</button>
 
 <style lang="scss">
-    $Orange: #CF6326;
+    $Orange: #FF9A60;
 button{
     font-family: 'K2D', sans-serif;
     font-size: 18px;
@@ -16,7 +16,7 @@ button{
     border-radius: 4px;
     border: 0px;
     background: $Orange;
-    color: #fff;
+    color: #000;
     @media (max-width: 660px) {
         font-size: 14px;
         width: 150px;
