--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -146,9 +146,9 @@ import ButtonFilledBlack from "../components/ButtonFilledBlack.astro";
 			<div>
 				<p>Vous pourrez profiter du parking qu’offre le centre de santé dans lequel se situe le cabinet.</p>
 			</div>
-			<!--<div>
+			<div>
 				<iframe class="map responsiveMap" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3938.741471519222!2d-0.20438632283925354!3d44.98867987107011!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd554cc66595d93b%3A0xc9e4d11c3cbd7af!2s67%20Rte%20de%20Coutras%2C%2033910%20Saint-Denis-de-Pile!5e1!3m2!1sfr!2sfr!4v1722115371219!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-			</div> -->
+			</div> 
 			<div>
 				<p>Le cabinet est situé au 67 route de Coutras, à Saint-Denis-de-Pile.</p>
 			</div>
@@ -163,7 +163,7 @@ import ButtonFilledBlack from "../components/ButtonFilledBlack.astro";
 
 <style lang="scss">
     /*variable couleur*/
-	$Orange: #CF6326;
+	$Orange: #FF9A60;
 	$BlueOne: #344E4C;
 	$BlueTwo: #2A5855;
 	$BlueThree: #21625E;
