--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,8 +7,8 @@ interface Props {
 const { title, description } = Astro.props;
 ---
 
-<section class="container_portfolio">
-    <div class="text_portfolio">
+<section class="container">
+    <div class="text">
         <h1 id="title">{title}</h1>
         <h2 id="description">{description}</h2>
     </div>
