--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -44,10 +44,9 @@ const { title, description } = Astro.props;
 			if (dateElement) {
 				dateElement.textContent = new Date().getFullYear().toString();
 			};
-		</script>
 
-		<!--bouton return to top -->
-		<script>
+
+			//bouton return to top
 			const btn = document.getElementById("return-to-top");
 
 			if (btn){
