--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,8 @@ import ButtonFilledWhtie from "../components/ButtonFilledWhite.astro";
 import ButtonFilledBlack from "../components/ButtonFilledBlack.astro";
 ---
 
+<!-- Améliorer les performance de la map -->
+
 <BaseLayout title="accueil" description="#">
 	<Header title="Cabinet d'ostéopathe" description="de Pierre TOURNEUX"></Header>
 
@@ -147,6 +149,7 @@ import ButtonFilledBlack from "../components/ButtonFilledBlack.astro";
 				<p>Vous pourrez profiter du parking qu’offre le centre de santé dans lequel se situe le cabinet.</p>
 			</div>
 			<div>
+				<!-- Améliorer les performance -->
 				<iframe class="map responsiveMap" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3938.741471519222!2d-0.20438632283925354!3d44.98867987107011!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd554cc66595d93b%3A0xc9e4d11c3cbd7af!2s67%20Rte%20de%20Coutras%2C%2033910%20Saint-Denis-de-Pile!5e1!3m2!1sfr!2sfr!4v1722115371219!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 			</div> 
 			<div>
