--- a/src/components/MobileHeader.astro
+++ b/src/components/MobileHeader.astro
@@ -8,8 +8,8 @@ import Logo from "./Logo.astro";
         <Logo></Logo>
     </div>
         <button class="burgerBtn">
-            <img class="burgerIcon" src="#" alt="icone menu fermé" >
-            <img class="burgerIcon hidden"src="#" alt="icone menu ouvert">
+            <img class="burgerIcon" src="/assets/image/open_menu.webp" alt="icone menu fermé" >
+            <img class="burgerIcon hidden"src="/assets/image/close_menu.webp" alt="icone menu ouvert">
         </button>
 </header>
 <div class="burgerContent">
