--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -34,7 +34,7 @@ const { title, description } = Astro.props;
 		<slot />
 		<div class="container_return">
 			<button id="return-to-top" class="return">
-				<img src="#" alt="icone flèche">
+				<img src="/assets/image/arrow.svg" alt="icone flèche">
 			</button>
 		</div>
         <Footer />
