--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -19,7 +19,7 @@ const { title, description } = Astro.props;
     width: 100%;
     max-width: 100%;
     height: 350px;
-    background-image: url(../../public/imgHeader.webp);
+    background-image: url(../../public/assets/image/imgHeader.webp);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
