--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -382,8 +382,12 @@ import ButtonFilledBlack from "../components/ButtonFilledBlack.astro";
 		}
 		.infoPracticiens{
 			div{
-				padding-top: 32px;
-				padding-bottom: 16px;
+				padding-top: 16px;
+				padding-bottom: 8px;
+				@media (min-width: 780px) {
+					padding-top: 32px;
+					padding-bottom: 16px;
+				}
 			}
 		}
 	}
