--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -3,20 +3,20 @@
 ---
 
 <a href="/">         
-    <div>
-        <h2>PT</h2>
-    </div>
+    PT
 </a>
 
 <style lang="scss">
-    div{
-        width: 70px;
-        height: 70px;
+    $White: #fff;
+    $Black: #000;
+    a{
+        color: $White;
+        text-decoration: none;
+        width: 30px;
+        height: 30px;
         border: 0;
-        img{
-            width: 100%;
-            height: 100%;
-            border-radius: 50%;
-        }
+        font-family: 'K2D', sans-serif;
+        font-weight: bold;
+        font-size: 32px;
     }
 </style>
