--- a/src/components/NavList.astro
+++ b/src/components/NavList.astro
@@ -4,7 +4,7 @@ import Logo from "./Logo.astro"
 ---
 <section class="containerNavbar">
     <div class="logoNavList">
-        <a href="/">
+        <a class="logo" href="/">
             PT
         </a>
     </div>
@@ -49,7 +49,13 @@ import Logo from "./Logo.astro"
             height: 70px;
             @media (max-width: 959px) {
                 display: none;
-
+            }
+            a{
+                color: $Black;
+                text-decoration: none;
+                font-family: 'K2D', sans-serif;
+                font-size: 40px;
+                font-weight: bold;
             }
         }
         /*NavList*/
