--- a/src/pages/osteopathie.astro
+++ b/src/pages/osteopathie.astro
@@ -3,9 +3,40 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 import Header from "../components/Header.astro";
 ---
 
-<!doctype html>
-<html>
 <BaseLayout title="osteopathie" description="#">
-    <Header title="Ostéopathie" description=""/>
+    <Header title="Ostéopathie" description=""></Header>
+    <section class="osteopathie">
+        <div>
+            <h2>Qu'est-ce que l'ostéopathie?</h2>
+        </div>
+        <div>
+            <p>L'ostéopathie est une médecine manuelle et globale basée sur l’anatomie et la physiologie reconnue par l'OMS 
+            (Organisation Mondiale de la Santé).</p>
+            <p>Elle a pour objectif de repérer et de restaurer manuellement certains manques de mobilité des structures du 
+            corps humain, afin d’agir efficacement sur certaines douleurs et certains troubles fonctionnels, aussi bien à 
+            titre préventif que curatif.</p>
+            <p>L'ostéopathie comporte plusieurs outils, tels que les techniques musculaires, articulaires 
+            (avec ou sans craquement), de fasciathérapie, tendineuses, ligamentaires, énergétiques, biodynamiques, 
+            posturales, crâniennes, viscérales, vasculaires, neurologiques, glandulaires et somato-émotionnelles.</p>
+            <p>L'ostéopathie peut se pratiquer à tous les âges.</p>
+        </div>
+    </section>
+    <section class="systèmesOsteopathie">
+        <!-- Incorporer les différents modals -->
+    </section>
+    <section class="quandConsulter">
+
+    </section>
+    <section class="typeOsteopathie">
+
+    </section>
+    <section class="craquementOsteopathie">
+        <div>
+            <h2></h2>
+        </div>
+        <div>
+            <p></p>
+            <p></p>
+        </div>
+    </section>
 </BaseLayout>
-</html>
