--- a/src/pages/osteopathie.astro
+++ b/src/pages/osteopathie.astro
@@ -3,6 +3,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 import Header from "../components/Header.astro";
 import TextReduce from "../components/TextReduce.astro";
 import Modal from "../components/Modal.astro";
+import ButtonFilled from "../components/ButtonFilled.astro";
 ---
 
 <BaseLayout title="osteopathie" description="#">
@@ -35,6 +36,9 @@ import Modal from "../components/Modal.astro";
             <div>
                 <TextReduce 
                 />
+            </div>
+            <div>
+                <ButtonFilled />
             </div>
         </section>
 
