--- a/src/pages/osteopathie.astro
+++ b/src/pages/osteopathie.astro
@@ -45,7 +45,12 @@ import ButtonFilled from "../components/ButtonFilled.astro";
         <!-- Section modal pour savoir quand il faut aller consulter -->
         <section class="quandConsulter">
             <Modal 
-            
+            title1="CHEZ LA FEMME ENCEINTE"
+            title2="CHEZ LE BÉBÉ"
+            title3="CHEZ L’ENFANT ET L’ADOLESCENT"
+            title4="CHEZ L’ADULTE"
+            title5="CHEZ LE SPORTIF"
+            title6="CHEZ LES PERSONNES AGÉES"
             />
         </section>
 
