--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import ButtonFilledBlack from "../components/ButtonFilledBlack.astro";
 <!-- Améliorer les performance de la map -->
 
 <BaseLayout title="accueil" description="#">
-	<Header title="Cabinet d'ostéopathe" description="de Pierre TOURNEUX"></Header>
+	<Header title="Cabinet d'ostéopathe" description="de Pierre TOURNEUX" />
 
 	<!-- Partie accès rapide -->
 	<div class="container">
@@ -33,7 +33,7 @@ import ButtonFilledBlack from "../components/ButtonFilledBlack.astro";
 					<!-- Bouton de la card -->
 					<div class="btnCard">
 						<a href="#">
-							<ButtonFilled2 title="APPELER"></ButtonFilled2>
+							<ButtonFilled2 title="APPELER" />
 						</a>	
 					</div>
 				</div>
@@ -56,7 +56,7 @@ import ButtonFilledBlack from "../components/ButtonFilledBlack.astro";
 					</div>
 						<div class="btnCard">
 						<a href="#">
-							<ButtonFilled></ButtonFilled>
+							<ButtonFilled />
 						</a>
 					</div>
 				</div>
@@ -83,7 +83,7 @@ import ButtonFilledBlack from "../components/ButtonFilledBlack.astro";
 					<!-- Bouton de la card -->
 					<div class="btnCard">
 						<a href="#">
-							<ButtonFilledWhtie></ButtonFilledWhtie>
+							<ButtonFilledWhtie />
 						</a>	
 					</div>
 				</div>
@@ -104,7 +104,7 @@ import ButtonFilledBlack from "../components/ButtonFilledBlack.astro";
 							<p>Emensis itaque difficultatibus multis et nive obrutis callibus plurimis 
 							ubi prope Rauracum ventum est ad supercilia flumini</p>
 							<a href="#">
-								<ButtonFilledWhtie></ButtonFilledWhtie>
+								<ButtonFilledWhtie />
 							</a>
 						</div>
 				</div>	
@@ -114,7 +114,7 @@ import ButtonFilledBlack from "../components/ButtonFilledBlack.astro";
 							<p>Emensis itaque difficultatibus multis et nive obrutis callibus plurimis 
 							ubi prope Rauracum ventum est ad supercilia flumini</p>
 							<a href="#">
-								<ButtonFilledWhtie></ButtonFilledWhtie>
+								<ButtonFilledWhtie />
 							</a>
 						</div>
 				</div>	
@@ -124,7 +124,7 @@ import ButtonFilledBlack from "../components/ButtonFilledBlack.astro";
 							<p>Emensis itaque difficultatibus multis et nive obrutis callibus plurimis 
 							ubi prope Rauracum ventum est ad supercilia flumini</p>
 							<a href="#">
-								<ButtonFilledWhtie></ButtonFilledWhtie>
+								<ButtonFilledWhtie />
 							</a>
 						</div>
 				</div>	
@@ -135,7 +135,7 @@ import ButtonFilledBlack from "../components/ButtonFilledBlack.astro";
 					<p>Le cabinet et le secrétariat sont ouverts du lundi au vendredi de 8h à 20h00 ainsi que le samedi de 8h à 19h.</p>
 				</div>	
 				<a href="#">
-					<ButtonFilled></ButtonFilled>
+					<ButtonFilled />
 				</a>
 			</div>
 		</section>
@@ -157,7 +157,7 @@ import ButtonFilledBlack from "../components/ButtonFilledBlack.astro";
 			</div>
 			<div>
 				<a href="#">
-					<ButtonFilledBlack></ButtonFilledBlack>
+					<ButtonFilledBlack />
 				</a>
 			</div>
 		</section>
