--- a/src/pages/osteopathie.astro
+++ b/src/pages/osteopathie.astro
@@ -34,8 +34,7 @@ import ButtonFilled from "../components/ButtonFilled.astro";
                 <h2>Les différents systèmes concernés :</h2>
             </div>
             <div>
-                <TextReduce 
-                />
+                <TextReduce />
             </div>
             <div>
                 <ButtonFilled />
@@ -44,14 +43,19 @@ import ButtonFilled from "../components/ButtonFilled.astro";
 
         <!-- Section modal pour savoir quand il faut aller consulter -->
         <section class="quandConsulter">
-            <Modal 
-            title1="CHEZ LA FEMME ENCEINTE"
-            title2="CHEZ LE BÉBÉ"
-            title3="CHEZ L’ENFANT ET L’ADOLESCENT"
-            title4="CHEZ L’ADULTE"
-            title5="CHEZ LE SPORTIF"
-            title6="CHEZ LES PERSONNES AGÉES"
-            />
+            <div>
+                <Modal 
+                title1="CHEZ LA FEMME ENCEINTE"
+                title2="CHEZ LE BÉBÉ"
+                title3="CHEZ L’ENFANT ET L’ADOLESCENT"
+                title4="CHEZ L’ADULTE"
+                title5="CHEZ LE SPORTIF"
+                title6="CHEZ LES PERSONNES AGÉES"
+                />
+            </div>
+            <div>
+                <ButtonFilled />
+            </div>
         </section>
 
         <!-- Section les différents types d'ostéopathie pratiqué -->
