--- a/src/components/ButtonFilled.astro
+++ b/src/components/ButtonFilled.astro
@@ -17,6 +17,7 @@ button{
     border: 0px;
     background: $Orange;
     color: #000;
+    cursor: pointer;
     @media (max-width: 660px) {
         font-size: 14px;
         width: 150px;
