--- a/src/components/ButtonFilled2.astro
+++ b/src/components/ButtonFilled2.astro
@@ -18,6 +18,7 @@ button{
     border: 0px;
     background: #fff;
     color: #000;
+    cursor: pointer;
     @media (max-width: 660px) {
         font-size: 14px;
         width: 150px;
