--- a/src/components/ButtonFilledBlack.astro
+++ b/src/components/ButtonFilledBlack.astro
@@ -14,6 +14,7 @@ button{
     background: transparent;
     color: #000;
     padding: 0;
+    cursor: pointer;
     @media (max-width: 660px) {
         font-size: 14px;
         width: 150px;
