--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -75,6 +75,9 @@ const { title, description } = Astro.props;
 	}
 	body{
 		margin: 0px;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
 	}
 	.container{
 		margin-right: 4.6%;
